# hls-downloader

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  downloader.c  epoll.c  epoll.h  http.c  http.h  log.h  mcurl.c  utility.h
cmake/Modules/: FindAvcodec.cmake  FindAvformat.cmake  FindAvutil.cmake  FindCurl.cmake  FindSwresample.cmake
src/: config.h  downloader.c  epoll.c  epoll.h  http.c  http.h  log.h  main.c  mcurl.c  mcurl.h  media.c  media.h  utility.c  utility.h
tests/: CMakeLists.txt  README.md  libav_example.c  remux_example.c
